--- a/utils/Options.cfg
+++ b/utils/Options.cfg
@@ -5,7 +5,7 @@
         id=deadundead
         default=0
         name=_"Enable Death"
-        description=_"Adds death as a possibility to the table. Undeath option will bring them back as undead."
+        description=_"Adds death as a possibility to the table. Undeath option will bring some of them back as undead or ghost."
         [item]
             name=_"No"
             value=0
