--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -9,7 +9,7 @@
 		[not]
 			[have_location]
 				[filter]
-					x,y=$x1,$y1
+					{EVENT_UNIT}
 					status=unplagueable
 				[/filter]
 			[/have_location]
@@ -18,8 +18,8 @@
 	[filter_second_attack]
 		special_type=plague
 	[/filter_second_attack]
-	{NFWME_dead_WOUND}
-	{VARIABLE nfwe_already_dead yes}	
+	{NFWME_plagued_WOUND}
+	{VARIABLE nfwe_already_dead yes}
 [/event]
 
 #random wound table
@@ -37,10 +37,10 @@
 			[fire_event]
 				name=nfwme_rand_wound
 				[primary_unit]
-					x,y=$x1,$y1
+					{EVENT_UNIT}
 				[/primary_unit]
 				[secondary_unit]
-					x,y=$x2,$y2
+					{SECOND_EVENT_UNIT}
 				[/secondary_unit]		
 			[/fire_event]
 		[/then]
@@ -62,7 +62,7 @@
 			[if]
 				[have_location]
 					[filter]
-						x,y=$x1,$y1
+						{EVENT_UNIT}
 						[has_attack]
 							special_id=magical
 						[/has_attack]
@@ -75,10 +75,10 @@
 					[fire_event]
 						name=nfwme_rand_wound
 						[primary_unit]
-							x,y=$x1,$y1
+							{EVENT_UNIT}
 						[/primary_unit]
 						[secondary_unit]
-							x,y=$x2,$y2
+							{SECOND_EVENT_UNIT}
 						[/secondary_unit]		
 					[/fire_event]
 				[/else]
@@ -90,7 +90,7 @@
 				[not]
 					[have_location]
 						[filter]
-							x,y=$x1,$y1
+							{EVENT_UNIT}
 							race=mechanical
 						[/filter]
 					[/have_location]
@@ -159,10 +159,10 @@
 							[fire_event]
 								name=nfwme_rand_wound
 								[primary_unit]
-									x,y=$x1,$y1
+									{EVENT_UNIT}
 								[/primary_unit]
 								[secondary_unit]
-									x,y=$x2,$y2
+									{SECOND_EVENT_UNIT}
 								[/secondary_unit]		
 							[/fire_event]
 						[/else]
@@ -172,10 +172,10 @@
 					[fire_event]
 						name=nfwme_rand_wound
 						[primary_unit]
-							x,y=$x1,$y1
+							{EVENT_UNIT}
 						[/primary_unit]
 						[secondary_unit]
-							x,y=$x2,$y2
+							{SECOND_EVENT_UNIT}
 						[/secondary_unit]		
 					[/fire_event]
 				[/else]
@@ -186,7 +186,7 @@
 			[if]
 				[have_location]
 					[filter]
-						x,y=$x1,$y1
+						{EVENT_UNIT}
 						race=mechanical
 					[/filter]
 				[/have_location]
@@ -194,10 +194,10 @@
 					[fire_event]
 						name=nfwme_rand_wound
 						[primary_unit]
-							x,y=$x1,$y1
+							{EVENT_UNIT}
 						[/primary_unit]
 						[secondary_unit]
-							x,y=$x2,$y2
+							{SECOND_EVENT_UNIT}
 						[/secondary_unit]		
 					[/fire_event]				
 				[/then]
@@ -221,10 +221,10 @@
 							[fire_event]
 								name=nfwme_rand_wound
 								[primary_unit]
-									x,y=$x1,$y1
+									{EVENT_UNIT}
 								[/primary_unit]
 								[secondary_unit]
-									x,y=$x2,$y2
+									{SECOND_EVENT_UNIT}
 								[/secondary_unit]		
 							[/fire_event]
 						[/else]
@@ -239,7 +239,7 @@
 				[or]
 					[have_location]
 						{EVENT_UNIT}
-						terrain=A*^*,Ms*^*,Rra^*,*^Esa,Ha*^*,*^F*a,*^V*a,C*a^*,K*a^*
+						terrain=A*,Ms*,Ha*,Cea^*,Coa^*,Cha^*,Cva^*,Cfa^*,Kea^*,Koa^*,Kha^*,Kva^*,Kfa^*,Rra^*,*^Esa,*^Fpa,*^Feta,*^Fda,*^Fma,*^Voa,*^Vea,*^Vha,*^Vhca,*^Vhha,*^Vca,*^Vla,*^Vaa
 					[/have_location]
 				[/or]
 				[then]
@@ -249,10 +249,10 @@
 					[fire_event]
 						name=nfwme_rand_wound
 						[primary_unit]
-							x,y=$x1,$y1
+							{EVENT_UNIT}
 						[/primary_unit]
 						[secondary_unit]
-							x,y=$x2,$y2
+							{SECOND_EVENT_UNIT}
 						[/secondary_unit]		
 					[/fire_event]
 				[/else]
@@ -263,7 +263,7 @@
 			[if]
 				[have_location]
 					[filter]
-						x,y=$x1,$y1
+						{EVENT_UNIT}
 						[has_attack]
 							special_id=magical
 						[/has_attack]
@@ -276,10 +276,10 @@
 					[fire_event]
 						name=nfwme_rand_wound
 						[primary_unit]
-							x,y=$x1,$y1
+							{EVENT_UNIT}
 						[/primary_unit]
 						[secondary_unit]
-							x,y=$x2,$y2
+							{SECOND_EVENT_UNIT}
 						[/secondary_unit]		
 					[/fire_event]
 				[/else]
@@ -296,10 +296,10 @@
 					[fire_event]
 						name=nfwme_rand_wound
 						[primary_unit]
-							x,y=$x1,$y1
+							{EVENT_UNIT}
 						[/primary_unit]
 						[secondary_unit]
-							x,y=$x2,$y2
+							{SECOND_EVENT_UNIT}
 						[/secondary_unit]		
 					[/fire_event]
 				[/else]
@@ -310,25 +310,37 @@
 			[if]
 				[have_location]
 					[filter]
-						x,y=$x1,$y1
+						{EVENT_UNIT}
 						race=horse,monster,wolf
 					[/filter]
 				[/have_location]
+				[or]
+					[have_location]
+						[filter]						
+							{EVENT_UNIT}
+							[filter_wml]
+								[movetype]
+									name=undeadspirit
+								[/movetype]
+							[/filter_wml]
+						[/filter]
+					[/have_location]							
+				[/or]				
 				[then]
 					[fire_event]
 						name=nfwme_rand_wound
 						[primary_unit]
-							x,y=$x1,$y1
+							{EVENT_UNIT}
 						[/primary_unit]
 						[secondary_unit]
-							x,y=$x2,$y2
+							{SECOND_EVENT_UNIT}
 						[/secondary_unit]		
 					[/fire_event]
 				[/then]
 				[elseif]
 					[have_location]
 						[filter]
-							x,y=$x1,$y1
+							{EVENT_UNIT}
 							race=bats,falcon,gryphon,drake
 						[/filter]
 					[/have_location]
@@ -336,7 +348,7 @@
 						[if]
 							[have_location]
 								[filter]
-									x,y=$x1,$y1
+									{EVENT_UNIT}
 									formula="unit.max_moves <= 1"
 								[/filter]
 							[/have_location]	
@@ -347,10 +359,10 @@
 								[fire_event]
 									name=nfwme_rand_wound
 									[primary_unit]
-										x,y=$x1,$y1
+										{EVENT_UNIT}
 									[/primary_unit]
 									[secondary_unit]
-										x,y=$x2,$y2
+										{SECOND_EVENT_UNIT}
 									[/secondary_unit]
 								[/fire_event]
 							[/else]
@@ -367,21 +379,37 @@
 			[if]
 				[have_location]
 					[filter]
-						x,y=$x1,$y1
+						{EVENT_UNIT}
 						race=bats,falcon,gryphon,naga,merman
-						[or]
-							formula="unit.max_moves <= 1"
-						[/or]
 					[/filter]
 				[/have_location]
+				[or]
+					[have_location]
+						[filter]
+							formula="unit.max_moves <= 1"
+						[/filter]
+					[/have_location]						
+				[/or]
+				[or]
+					[have_location]
+						[filter]						
+							{EVENT_UNIT}
+							[filter_wml]
+								[movetype]
+									name=undeadspirit
+								[/movetype]
+							[/filter_wml]
+						[/filter]
+					[/have_location]							
+				[/or]
 				[then]
 					[fire_event]
 						name=nfwme_rand_wound
 						[primary_unit]
-							x,y=$x1,$y1
+							{EVENT_UNIT}
 						[/primary_unit]
 						[secondary_unit]
-							x,y=$x2,$y2
+							{SECOND_EVENT_UNIT}
 						[/secondary_unit]		
 					[/fire_event]					
 				[/then]
@@ -398,10 +426,22 @@
 					[not]
 						[have_location]
 							[filter]
-								x,y=$x1,$y1
+								{EVENT_UNIT}
 								race=mechanical
 							[/filter]
 						[/have_location]
+						[or]
+							[have_location]
+								[filter]						
+									{EVENT_UNIT}
+									[filter_wml]
+										[movetype]
+											name=undeadspirit
+										[/movetype]
+									[/filter_wml]
+								[/filter]
+							[/have_location]							
+						[/or]							
 					[/not]
 				[/and]
 				[then]
@@ -411,10 +451,10 @@
 					[fire_event]
 						name=nfwme_rand_wound
 						[primary_unit]
-							x,y=$x1,$y1
+							{EVENT_UNIT}
 						[/primary_unit]
 						[secondary_unit]
-							x,y=$x2,$y2
+							{SECOND_EVENT_UNIT}
 						[/secondary_unit]		
 					[/fire_event]
 				[/else]
@@ -431,10 +471,10 @@
 					[fire_event]
 						name=nfwme_rand_wound
 						[primary_unit]
-							x,y=$x1,$y1
+							{EVENT_UNIT}
 						[/primary_unit]
 						[secondary_unit]
-							x,y=$x2,$y2
+							{SECOND_EVENT_UNIT}
 						[/secondary_unit]		
 					[/fire_event]
 				[/else]
@@ -445,20 +485,32 @@
 			[if]
 				[have_location]
 					[filter]
-						x,y=$x1,$y1
+						{EVENT_UNIT}
 						[has_attack]
 							special_id=berserk
 						[/has_attack]
 					[/filter]
 				[/have_location]				
+				[or]
+					[not]
+						[have_location]	
+							[filter]
+								{EVENT_UNIT}
+								[has_attack]
+									range=melee
+								[/has_attack]	
+							[/filter]						
+						[/have_location]	
+					[/not]
+				[/or]					
 				[then]
 					[fire_event]
 						name=nfwme_rand_wound
 						[primary_unit]
-							x,y=$x1,$y1
+							{EVENT_UNIT}
 						[/primary_unit]
 						[secondary_unit]
-							x,y=$x2,$y2
+							{SECOND_EVENT_UNIT}
 						[/secondary_unit]		
 					[/fire_event]
 				[/then]
@@ -472,14 +524,14 @@
 			[if]
 				[have_location]
 					[filter]
-						x,y=$x1,$y1
+						{EVENT_UNIT}
 						race=mechanical
 					[/filter]
 				[/have_location]
 				[or]
 					[have_location]
 						[filter]
-							x,y=$x1,$y1
+							{EVENT_UNIT}
 							status=unpoisonable
 						[/filter]
 					[/have_location]					
@@ -488,10 +540,10 @@
 					[fire_event]
 						name=nfwme_rand_wound
 						[primary_unit]
-							x,y=$x1,$y1
+							{EVENT_UNIT}
 						[/primary_unit]
 						[secondary_unit]
-							x,y=$x2,$y2
+							{SECOND_EVENT_UNIT}
 						[/secondary_unit]		
 					[/fire_event]
 				[/then]
@@ -513,7 +565,7 @@
 			[if]
 				[have_location]
 					[filter]
-						x,y=$x1,$y1
+						{EVENT_UNIT}
 						race=mechanical
 					[/filter]
 				[/have_location]
@@ -521,10 +573,10 @@
 					[fire_event]
 						name=nfwme_rand_wound
 						[primary_unit]
-							x,y=$x1,$y1
+							{EVENT_UNIT}
 						[/primary_unit]
 						[secondary_unit]
-							x,y=$x2,$y2
+							{SECOND_EVENT_UNIT}
 						[/secondary_unit]		
 					[/fire_event]					
 				[/then]
@@ -535,7 +587,28 @@
 		[/case]
 		[case]
 			value=23
-			{NFWME_fear_of_weapon_WOUND}
+			[if]
+				[have_location]
+					[filter]
+						{EVENT_UNIT}
+						race=mechanical
+					[/filter]
+				[/have_location]
+				[then]
+					[fire_event]
+						name=nfwme_rand_wound
+						[primary_unit]
+							{EVENT_UNIT}
+						[/primary_unit]
+						[secondary_unit]
+							{SECOND_EVENT_UNIT}
+						[/secondary_unit]		
+					[/fire_event]					
+				[/then]
+				[else]
+					{NFWME_fear_of_weapon_WOUND}
+				[/else]
+			[/if]	
 		[/case]
 		[case]
 			value=24
@@ -550,7 +623,7 @@
 			[if]
 				[have_location]
 					[filter]
-						x,y=$x1,$y1
+						{EVENT_UNIT}
 						race=mechanical
 					[/filter]
 				[/have_location]
@@ -558,13 +631,12 @@
 					[fire_event]
 						name=nfwme_rand_wound
 						[primary_unit]
-							x,y=$x1,$y1
+							{EVENT_UNIT}
 						[/primary_unit]
 						[secondary_unit]
-							x,y=$x2,$y2
+							{SECOND_EVENT_UNIT}
 						[/secondary_unit]		
 					[/fire_event]
-
 				[/then]
 				[else]
 					{NFWME_necrosis_WOUND}
@@ -576,7 +648,7 @@
 			[if]
 				[have_location]
 					[filter]
-						x,y=$x1,$y1
+						{EVENT_UNIT}
 						formula="unit.experience < (unit.max_experience / 2)"
 					[/filter]
 				[/have_location]
@@ -584,10 +656,10 @@
 					[fire_event]
 						name=nfwme_rand_wound
 						[primary_unit]
-							x,y=$x1,$y1
+							{EVENT_UNIT}
 						[/primary_unit]
 						[secondary_unit]
-							x,y=$x2,$y2
+							{SECOND_EVENT_UNIT}
 						[/secondary_unit]		
 					[/fire_event]
 				[/then]
@@ -604,7 +676,7 @@
 					[not]
 						[have_location]
 							[filter]
-								x,y=$x1,$y1
+								{EVENT_UNIT}
 								[filter_wml]
 									[movetype]
 										name=undeadspirit
@@ -627,10 +699,10 @@
 					[fire_event]
 						name=nfwme_rand_wound
 						[primary_unit]
-							x,y=$x1,$y1
+							{EVENT_UNIT}
 						[/primary_unit]
 						[secondary_unit]
-							x,y=$x2,$y2
+							{SECOND_EVENT_UNIT}
 						[/secondary_unit]		
 					[/fire_event]				
 				[/else]
@@ -644,7 +716,7 @@
 					[not]
 						[have_location]
 							[filter]
-								x,y=$x1,$y1
+								{EVENT_UNIT}
 								race=undead
 							[/filter]
 						[/have_location]				
@@ -663,10 +735,10 @@
 					[fire_event]
 						name=nfwme_rand_wound
 						[primary_unit]
-							x,y=$x1,$y1
+							{EVENT_UNIT}
 						[/primary_unit]
 						[secondary_unit]
-							x,y=$x2,$y2
+							{SECOND_EVENT_UNIT}
 						[/secondary_unit]		
 					[/fire_event]					
 				[/else]
@@ -683,10 +755,10 @@
 					[fire_event]
 						name=nfwme_rand_wound
 						[primary_unit]
-							x,y=$x1,$y1
+							{EVENT_UNIT}
 						[/primary_unit]
 						[secondary_unit]
-							x,y=$x2,$y2
+							{SECOND_EVENT_UNIT}
 						[/secondary_unit]		
 					[/fire_event]
 				[/else]
@@ -703,10 +775,10 @@
 					[fire_event]
 						name=nfwme_rand_wound
 						[primary_unit]
-							x,y=$x1,$y1
+							{EVENT_UNIT}
 						[/primary_unit]
 						[secondary_unit]
-							x,y=$x2,$y2
+							{SECOND_EVENT_UNIT}
 						[/secondary_unit]		
 					[/fire_event]
 				[/else]
