--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -217,7 +217,7 @@
 #define NFWME_captured_WOUND
    [modify_unit]
 		[filter]
-			x,y=$x1,$y1
+			{EVENT_UNIT}
 			[filter_side]
 				controller=human
 			[/filter_side]
@@ -312,11 +312,10 @@ Redeem yourself by defeating an opponent with at least 1 level higher than you, 
 #enddef
 
 #define NFWME_dead_WOUND
-	[message]
-		speaker=narrator
-		message= _ "$unit.name a $unit.type was destroyed."
-		image=$unit.profile
-	[/message]
+	[store_unit_type]
+		type=$unit.type
+		variable=nfwme_unit_type
+	[/store_unit_type]
 	#causes lua error when sides other than side 1 get it
 	[modify_unit]
 		{FILTER_EVENT_UNIT}
@@ -326,7 +325,58 @@ Redeem yourself by defeating an opponent with at least 1 level higher than you, 
 			female_name="<span color='#DA0000'>"+_"female^dead"+"</span>"
 		[/trait]
 	[/modify_unit]
+	[if]
+		[have_location]
+			[filter]
+				{EVENT_UNIT}
+				[filter_side]
+					controller=human
+				[/filter_side]
+			[/filter]
+		[/have_location]		
+		[then]
+			[message]
+				speaker=narrator
+				message= _ "$unit.name a $nfwme_unit_type.name was destroyed."
+				image=$unit.profile
+			[/message]
+		[/then]
+	[/if]
 	{NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Dead" {NFWME_COLOR_RED}}
+    
+#enddef
+
+#define NFWME_plagued_WOUND
+	[store_unit_type]
+		type=$unit.type
+		variable=nfwme_unit_type
+	[/store_unit_type]
+	[modify_unit]
+		{FILTER_EVENT_UNIT}
+		[trait]
+			id=nfwme_dead
+			male_name="<span color='#DA0000'>"+_"plagued"+"</span>"
+			female_name="<span color='#DA0000'>"+_"female^plagued"+"</span>"
+		[/trait]
+	[/modify_unit]
+	[if]
+		[have_location]
+			[filter]
+				{EVENT_UNIT}
+				[filter_side]
+					controller=human
+				[/filter_side]
+			[/filter]
+		[/have_location]		
+		[then]
+			[message]
+				speaker=narrator
+				message= _ "$unit.name a $nfwme_unit_type.name was converted."
+				image=$unit.profile
+			[/message]
+		[/then]
+	[/if]
+	{NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Lost" {NFWME_COLOR_RED}}
     
 #enddef
 
@@ -334,7 +384,7 @@ Redeem yourself by defeating an opponent with at least 1 level higher than you, 
 #textdomain wesnoth-units
 	[set_variable]
 		name=nfwme_translated_scary_weapon
-		value=_"$second_weapon.description"
+		value="$second_weapon.description"
 	[/set_variable]
 #textdomain wesnoth-Non_Fatal_Wounds
 	[modify_unit]
@@ -347,7 +397,7 @@ Redeem yourself by defeating an opponent with at least 1 level higher than you, 
 					mode=append
 					[attacks]
 						name="<span color='#DA0000'>"+_"weakness"+"</span>"
-						description=_"-1 strikes when facing an enemy with $nfwme_translated_scary_weapon.
+						description=_"-1 strikes when facing an enemy with $second_weapon.description|.
 Face your fears and defeat them to try to overcome them."
 						id=nfwme_scared_of_weapon
 						[filter_opponent]
@@ -364,7 +414,7 @@ Face your fears and defeat them to try to overcome them."
 	
 	[store_unit]
 		[filter]
-			x,y=$x1,$y1
+			{EVENT_UNIT}
 		[/filter]
 		mode=replace
 		variable=nfwme_wounded_unit
@@ -377,15 +427,15 @@ Face your fears and defeat them to try to overcome them."
 	[/set_variable]
 	[set_variable]
 		name=nfwme_wounded_unit.variables.scary_weapon_translated
-		to_variable=nfwme_translated_scary_weapon
+		to_variable=second_weapon.description
 	[/set_variable]
 	
 	[unstore_unit]
 		variable=nfwme_wounded_unit
-		x,y=$x1,$y1
+		{EVENT_UNIT}
 	[/unstore_unit]
 	{CLEAR_VARIABLE nfwme_wounded_unit}
-	{NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Scared of $nfwme_translated_scary_weapon" {NFWME_COLOR_RED}}
+	{NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Scared of $second_weapon.description" {NFWME_COLOR_RED}}
 #enddef
 
 #define NFWME_fear_of_water_WOUND
@@ -1160,7 +1210,7 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
 
 	[store_unit]
 		[filter]
-			x,y=$x1,$y1
+			{EVENT_UNIT}
 			level=2,3,4
 		[/filter]
 		mode=replace
@@ -1175,7 +1225,7 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
 
 	[unstore_unit]
 		variable=nfwme_ghost_advancment
-		x,y=$x1,$y1
+		{EVENT_UNIT}
 	[/unstore_unit]
 	{CLEAR_VARIABLE nfwme_ghost_advancment}
 	{NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Ghost" {NFWME_COLOR_RED}}
