--- a/utils/campaign_SotA.cfg
+++ b/utils/campaign_SotA.cfg
@@ -57,7 +57,7 @@
 
     [store_unit]
         [filter]
-            x,y=$x1,$y1
+            {EVENT_UNIT}
         [/filter]
         mode=append
         variable=nfw_wounded
