--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -40,7 +40,7 @@
     # It isn't limited to player-controlled sides either, for example Olurf in LoW's 02_Hostile_Mountains.
     [store_unit]
         [filter]
-            x,y=$x1,$y1
+            {EVENT_UNIT}
         [/filter]
         mode=append
         variable=nfw_wounded
