New info dialogs
Also less hexagons activates agoraphobia

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -114,7 +114,6 @@
 								{NFWME_fear_of_desert_WOUND}
 							[/then]
 						[/elseif]
-						
 						[elseif]
 							[have_location]
 								{EVENT_UNIT}
@@ -124,7 +123,6 @@
 								{NFWME_fear_of_cave_WOUND}
 							[/then]
 						[/elseif]
-						
 						[elseif]
 							[have_location]
 								{EVENT_UNIT}
@@ -134,7 +132,6 @@
 								{NFWME_fear_of_hight_WOUND}
 							[/then]
 						[/elseif]
-						
 						[elseif]
 							[have_location]
 								{EVENT_UNIT}
@@ -144,12 +141,19 @@
 								{NFWME_fear_of_plant_WOUND}
 							[/then]
 						[/elseif]
-
 						[elseif]
 							[have_location]
 								{EVENT_UNIT}
 								terrain=G*^*,R*^*
 							[/have_location]
+							[and]
+								[not]
+									[have_location]
+										{EVENT_UNIT}
+										terrain=*^V*,*^P*,*^E*,*^F*,*^T*,*^B*
+									[/have_location]
+								[/not]
+							[/and]
 							[then]
 								{NFWME_fear_of_open_WOUND}
 							[/then]
