--- a/utils/Wound_logic.cfg
+++ b/utils/Wound_logic.cfg
@@ -4,7 +4,7 @@
 	id=nfwme_activate_wounds
 	first_time_only=no
 	[kill]
-		trait=nfwme_dead
+		trait=nfwme_dead,nfwme_plagued
 	[/kill]
 	
 	#these prevent units from loseing more max health every senario
