--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -312,10 +312,7 @@ Redeem yourself by defeating an opponent with at least 1 level higher than you, 
 #enddef
 
 #define NFWME_dead_WOUND
-	[store_unit_type]
-		type=$unit.type
-		variable=nfwme_unit_type
-	[/store_unit_type]
+
 	#causes lua error when sides other than side 1 get it
 	[modify_unit]
 		{FILTER_EVENT_UNIT}
@@ -325,57 +322,22 @@ Redeem yourself by defeating an opponent with at least 1 level higher than you, 
 			female_name="<span color='#DA0000'>"+_"female^dead"+"</span>"
 		[/trait]
 	[/modify_unit]
-	[if]
-		[have_location]
-			[filter]
-				{EVENT_UNIT}
-				[filter_side]
-					controller=human
-				[/filter_side]
-			[/filter]
-		[/have_location]		
-		[then]
-			[message]
-				speaker=narrator
-				message= _ "$unit.name a $nfwme_unit_type.name was destroyed."
-				image=$unit.profile
-			[/message]
-		[/then]
-	[/if]
+
 	{NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Dead" {NFWME_COLOR_RED}}
     
 #enddef
 
 #define NFWME_plagued_WOUND
-	[store_unit_type]
-		type=$unit.type
-		variable=nfwme_unit_type
-	[/store_unit_type]
+
 	[modify_unit]
 		{FILTER_EVENT_UNIT}
 		[trait]
-			id=nfwme_dead
+			id=nfwme_plagued
 			male_name="<span color='#DA0000'>"+_"plagued"+"</span>"
 			female_name="<span color='#DA0000'>"+_"female^plagued"+"</span>"
 		[/trait]
 	[/modify_unit]
-	[if]
-		[have_location]
-			[filter]
-				{EVENT_UNIT}
-				[filter_side]
-					controller=human
-				[/filter_side]
-			[/filter]
-		[/have_location]		
-		[then]
-			[message]
-				speaker=narrator
-				message= _ "$unit.name a $nfwme_unit_type.name was converted."
-				image=$unit.profile
-			[/message]
-		[/then]
-	[/if]
+
 	{NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Lost" {NFWME_COLOR_RED}}
     
 #enddef
