--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -30,7 +30,7 @@
     [/filter]
 
     [fire_event]
-        name=nfw_dialogue_on_first_death
+        name=nfw_dialogue_on_death
         [primary_unit]
             id=$unit.id
         [/primary_unit]
@@ -48,25 +48,119 @@
     [/store_unit]
 [/event]
 
-# Text to inform the player that the unit was stored. This is in a separate event so that it doesn't repeat when more units die.
+# Text to inform the player that the unit was stored and how
 [event]
-    name=nfw_dialogue_on_first_death
+    name=nfw_dialogue_on_death
+    first_time_only=no
     [filter]
-        # Although the last_breath event stores units from all sides, only show when the first unit from the player's side dies (assuming that's side 1).
-        side=1
+		{EVENT_UNIT}
+		[filter_side]
+			controller=human
+		[/filter_side]
     [/filter]
-
-    [message]
-        speaker=$unit.id
-        message= _ "Argh, I’m wounded"
-        female_message= _ "female^Argh, I’m wounded"
-    [/message]
-    [message]
-        speaker=narrator
-        message= _ "With this modification enabled, units are merely wounded instead of killed. If you win this scenario then they will be added to your recall list.
+	[store_unit_type]
+		type=$unit.type
+		variable=nfwme_unit_type
+	[/store_unit_type]	
+	[if]
+		[have_location]
+			{EVENT_UNIT}
+			[filter]
+				trait=nfwme_dead
+			[/filter]
+		[/have_location]
+		[then]
+			[message]
+				speaker=$unit.id
+				message= _ "Argh, I’m dying"
+				female_message= _ "female^Argh, I’m dying"
+			[/message]
+			[message]
+				speaker=narrator
+				message= _ "$unit.name a $nfwme_unit_type.name was destroyed."
+				image=$unit.profile
+			[/message]
+		[/then]
+		[elseif]
+			[have_location]
+				{EVENT_UNIT}
+				[filter]
+					trait=nfwme_corpse
+				[/filter]
+			[/have_location]		
+			[then]
+				[message]
+					speaker=$unit.id
+					message= _ "Argh, I’m dying"
+					female_message= _ "female^Argh, I’m dying"
+				[/message]
+				[message]
+					speaker=narrator
+					message= _ "$unit.name a $nfwme_unit_type.name was revived as undead."
+					image=$unit.profile
+				[/message]
+			[/then]
+		[/elseif]
+		[elseif]
+			[have_location]
+				{EVENT_UNIT}
+				[filter]
+					trait=ghost_trait
+				[/filter]
+			[/have_location]		
+			[then]
+				[message]
+					speaker=$unit.id
+					message= _ "Argh, I’m dying"
+					female_message= _ "female^Argh, I’m dying"
+				[/message]
+				[message]
+					speaker=narrator
+					message= _ "$unit.name a $nfwme_unit_type.name returned as a ghost."
+					image=$unit.profile
+				[/message]
+			[/then]
+		[/elseif]
+		[elseif]
+			[have_location]
+				{EVENT_UNIT}
+				[filter]
+					trait=nfwme_plagued
+				[/filter]
+			[/have_location]		
+			[then]
+				[message]
+					speaker=$unit.id
+					message= _ "Argh"
+					female_message= _ "female^Argh"
+				[/message]
+				[message]
+					speaker=narrator
+					message= _ "$unit.name a $nfwme_unit_type.name was converted by the enemy."
+					image=$unit.profile
+				[/message]
+			[/then]
+		[/elseif]		
+		[else]
+			[message]
+				speaker=$unit.id
+				message= _ "Argh, I’m wounded"
+				female_message= _ "female^Argh, I’m wounded"
+			[/message]
+		[/else]
+	[/if]
+	[if]
+		{VARIABLE_CONDITIONAL nfw_first_death not_equals yes}
+		[then]
+			[message]
+				speaker=narrator
+				message= _ "With this modification enabled, units are merely wounded instead of killed. If you choose the possibility of dead or undead, some units still can definitely die. If you win this scenario the wounded units will be added to your recall list.
 
 This does not apply to any unit that the objectives require you to keep alive. Even if they say they’re only wounded, the enemy will give your heroes no chance."
-    [/message]
+			[/message]
+			{VARIABLE nfw_first_death yes}
+		[/then]
+	[/if]
 [/event]
 
 # In multiplayer the victory event is synchronized since 1.13.10
