--- a/utils/Macros.cfg
+++ b/utils/Macros.cfg
@@ -35,3 +35,25 @@
 #define NFWME_FLOAT_TEXT_SECOND_UNIT MSG COLOR
 	{NFWME_FLOAT_TEXT $x2 $y2 {MSG} {COLOR}}
 #enddef
+
+#define NFW_FILTER_HEROES
+        canrecruit=yes
+        [or]
+		[filter_wml]
+			ellipse="misc/ellipse-hero"
+		[/filter_wml]
+        [/or]
+		[or]
+			[filter_wml]
+				ellipse="misc/ellipse-hero-nozoc"
+			[/filter_wml]
+		[/or]
+		[or]
+			[filter_wml]
+				overlays="misc/hero-icon.png",
+			[/filter_wml]
+		[/or]
+		[or]
+			id=Sir Gerrick,"Li'sar",Minister Hylas,Ethiliel,Urza Afalas,Dacyn,Garak,Zhul,Lionel,Relgorn,Darken Volk,Owaec,Harper,Hamel,"Ro'Arthian",Baglur,Krawg,Thursagan,Durstorn,Grüü,Angarthing,Ratheln,Dulcatulos,Cylanna,Caladon,Garnad,Marshal,Great Chief Brurbar,Sisal,Krash,Lady Jessene,Burin the Lost,Sir Ruddry,Sir Ladoc,Minister Edren,Lord Typhon,Nym,Grog,Konrad,Delfador,Kalenz,Prince Haldric,Haldric II,Deoran,Erlornas,Linaera,Baldras,Tallin,Baran,Rugnur,Gweddry,Kai Krellis,Malin Keshar,Aiglondur,Ardonna,Kaleh,"Kapou'e",Voadar,Jaffar,Rashti,Mehir,Menir,Szel,Arvith,Efraim_de_Ceise,Delenia,Krux,Krux_father,Clammie,Galas,Ailiandil,,Aisalting,Aisalting,Azyan,Brom,Coral,Durmenthrain,Echelana,Echlebert,Grim,Guldarmaadh,Ibn Ghani,Ibn Khazul,Ilaroth,Ilrandh,Ilriel,Iskandar,Khazran,Moraen,Norn,Nuvdael,Onarr,Rhamuniel,Ridwan,Schabral,Skjol_Forefather,Skjol,Uthain,Wahdet,Yrialdhe
+		[/or]
+#enddef
