--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -1,6 +1,34 @@
+#textdomain wesnoth-Non_Fatal_Wounds
+#filter special characters #TODO Liches on Northern Rebirth
+[event]
+	name=last_breath
+	id=nfwme_death_filter
+	first_time_only=no
+	[filter_condition]
+		[have_location]
+			[filter]
+				{EVENT_UNIT}
+				id=Wesfolk Leader
+			[/filter]
+		[/have_location]
+	[/filter_condition]
+	[switch]
+		variable=nfw_current_scenario_id
+#ifdef CAMPAIGN_THE_RISE_OF_WESNOTH
+        [case]
+            value=02_The_Fall
+			{NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Surrender" {NFWME_COLOR_RED}}
+			{VARIABLE nfwe_already_dead yes}
+        [/case]
+		[else]
+			{NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Escape" {NFWME_COLOR_RED}}
+			{VARIABLE nfwe_already_dead yes}
+		[/else]
+#endif
+	[/switch]
+[/event]
 
-#filter plagueable and plagued units
-
+#filter plagueable plagued units
 [event]
 	name=last_breath
 	id=nfwme_death_plague
@@ -54,7 +82,7 @@
 	name=nfwme_rand_wound
 	id=nfwme_rand_wound_id
 	first_time_only=no
-	{VARIABLE_OP rand_wound rand(1..70)}
+	{VARIABLE_OP rand_wound rand(1..100)}
 	[switch]
 		variable=rand_wound
 		[case]
@@ -564,6 +592,31 @@
 			value=21
 			{NFWME_captured_WOUND}
 		[/case]
+		[case]
+			value=71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98,99,100
+			[if]
+				[have_location]
+					[filter]
+						{EVENT_UNIT}
+						{NFW_FILTER_HEROES}
+					[/filter]
+				[/have_location]
+				[then]
+					{NFWME_captured_WOUND}				
+				[/then]
+				[else]
+					[fire_event]
+						name=nfwme_rand_wound
+						[primary_unit]
+							{EVENT_UNIT}
+						[/primary_unit]
+						[secondary_unit]
+							{SECOND_EVENT_UNIT}
+						[/secondary_unit]		
+					[/fire_event]
+				[/else]
+			[/if]								
+		[/case]		
 		[case]
 			value=22
 			[if]
