--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -61,7 +61,6 @@
         [/case]
 #endif
     [/switch]
-    {CLEAR_VARIABLE nfw_current_scenario_id}
 [/event]
 
 # Some campaign-specific or scenario-specific warnings that display a message but don't change the behavior of the mod.
@@ -92,10 +91,9 @@
             [message]
                 speaker=narrator
                 # po: For this scenario, the objective is to avoid deaths for as long as possible, the scenario ends when any unit perishes.
-                message= _ "The non-fatal wound modification does not affect the objectives for this scenario. The unit survives, but still triggers the same events as if it died."
+                message= _ "The non-fatal wound modification does not affect the objectives for this scenario. The unit can survives, but still triggers the same events as if it died."
             [/message]
         [/case]
 #endif
     [/switch]
-    {CLEAR_VARIABLE nfw_current_scenario_id}
 [/event]
