--- a/utils/last_scenario.cfg
+++ b/utils/last_scenario.cfg
@@ -17,7 +17,7 @@
 #textdomain wesnoth-Non_Fatal_Wounds
     [message]
         speaker=narrator
-        message= _ "Because this is the last scenario, the non-fatal wound modification is disabled"
+        message= _ "Because this is the last scenario, the ending of the campaign will count wounded units as if they had been killed."
     [/message]
     [fire_event]
         id=nfw_disable_for_this_scenario
