--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -140,6 +140,26 @@
 					image=$unit.profile
 				[/message]
 			[/then]
+		[/elseif]
+		[elseif]
+			[have_location]
+				{EVENT_UNIT}
+				[filter]
+					ability=captured_unit_display
+				[/filter]
+			[/have_location]		
+			[then]
+				[message]
+					speaker=$unit.id
+					message= _ "Please rescue me!"
+					female_message= _ "female^Please rescue me!"
+				[/message]
+				[message]
+					speaker=narrator
+					message= _ "$unit.name a $nfwme_unit_type.name was captured by the enemy. You will have to pay a ransom."
+					image=$unit.profile
+				[/message]
+			[/then]
 		[/elseif]		
 		[else]
 			[message]
