--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -230,7 +230,7 @@
 					[display]
 						id=captured_unit_display
 						name="<span color='#DA0000'>"+_"captured"+"</span>"
-						description=_"Captured units have a increased recall cost untill you recall them once (recall+(10xlevel))."
+						description=_"Captured units have a increased recall cost untill you recall them once (recall+(10xlevel))."+_"Current cost: $unit.recall_cost"
 					[/display]
 				[/abilities]
 			[/effect]
@@ -372,31 +372,16 @@ Face your fears and defeat them to try to overcome them."
 				[/set_specials]
 			[/effect]
 		[/object]
+		[set_variable]
+			name=unit.variables.scary_weapon
+			to_variable=nfwme_rand_scary_weapon
+		[/set_variable]
+		[set_variable]
+			name=unit.variables.scary_weapon_translated
+			to_variable=second_weapon.description
+		[/set_variable]
 	[/modify_unit]
 	
-	[store_unit]
-		[filter]
-			{EVENT_UNIT}
-		[/filter]
-		mode=replace
-		variable=nfwme_wounded_unit
-		kill=no
-	[/store_unit]
-	
-	[set_variable]
-		name=nfwme_wounded_unit.variables.scary_weapon
-		to_variable=nfwme_rand_scary_weapon
-	[/set_variable]
-	[set_variable]
-		name=nfwme_wounded_unit.variables.scary_weapon_translated
-		to_variable=second_weapon.description
-	[/set_variable]
-	
-	[unstore_unit]
-		variable=nfwme_wounded_unit
-		{EVENT_UNIT}
-	[/unstore_unit]
-	{CLEAR_VARIABLE nfwme_wounded_unit}
 	{NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Scared of $second_weapon.description" {NFWME_COLOR_RED}}
 #enddef
 
