--- a/_main.cfg
+++ b/_main.cfg
@@ -8,9 +8,9 @@
 
 	id=nfw_extended
     name=_"Non-Fatal Wounds Extended"
-    description=_"Units killed during a scenario are instead merely wounded, and can be recalled in later scenarios.
+    description=_"With this modification enabled, units are merely wounded instead of killed. If you choose the possibility of dead or undead, some units still can definitely die. If you win this scenario the wounded units will be added to your recall list.
 
-This does not protect your heroes — you’ll still lose if any character who has to survive is wounded. The enemy isn’t going to miss the chance of finishing the battle by letting a leader escape."
+This does not apply to any unit that the objectives require you to keep alive. Even if they say they’re only wounded, the enemy will give your heroes no chance."
     require_modification=no
 	
     # Notes about the implementation:
