--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -8,7 +8,7 @@
 		[have_location]
 			[filter]
 				{EVENT_UNIT}
-				id=Wesfolk Leader
+				id=Wesfolk Leader,Lady Outlaw
 			[/filter]
 		[/have_location]
 	[/filter_condition]
@@ -17,12 +17,22 @@
 #ifdef CAMPAIGN_THE_RISE_OF_WESNOTH
         [case]
             value=02_The_Fall
-			{NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Surrender" {NFWME_COLOR_RED}}
+			[if]
+				{VARIABLE_CONDITIONAL have_lady equals 1}
+				[then]
+					{NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Surrender" {NFWME_COLOR_RED}}
+				[/then]
+				[else]
+					{NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Escape" {NFWME_COLOR_RED}}
+				[/else]
+			[/if]
 			{VARIABLE nfwe_already_dead yes}
+			{VARIABLE nfw_exclude_unit_id "Lady Outlaw,Wesfolk Leader"}
         [/case]
 		[else]
 			{NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Escape" {NFWME_COLOR_RED}}
 			{VARIABLE nfwe_already_dead yes}
+			{VARIABLE nfw_exclude_unit_id "Lady Outlaw"}
 		[/else]
 #endif
 	[/switch]
@@ -34,18 +44,30 @@
 	id=nfwme_death_plague
 	first_time_only=no
 	[filter_condition]
-		[not]
-			[have_location]
-				[filter]
-					{EVENT_UNIT}
-					status=unplagueable
-				[/filter]
-			[/have_location]
-		[/not]
+		{VARIABLE_CONDITIONAL nfw_all_plagued not_equals yes}
 	[/filter_condition]
+	[filter]
+		[not]
+			{EVENT_UNIT}
+			status=unplagueable
+		[/not]
+	[/filter]
 	[filter_second_attack]
 		special_type=plague
 	[/filter_second_attack]
+	{NFWME_plagued_WOUND}
+	{VARIABLE nfwe_already_dead yes}
+[/event]
+
+#filter forced plagued for some scenarios
+
+[event]
+	name=last_breath
+	id=nfwme_death_plague_forced
+	first_time_only=no
+	[filter_condition]
+		{VARIABLE_CONDITIONAL nfw_all_plagued equals yes}
+	[/filter_condition]
 	{NFWME_plagued_WOUND}
 	{VARIABLE nfwe_already_dead yes}
 [/event]
