--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -2,6 +2,17 @@
 
 # To make a campaign-specific override for specific units, set the value of the nfw_exclude_unit_id to a comma-separated list of the non-saved units.
 
+[event]
+    name=prestart
+	first_time_only=no
+    [lua]
+        # This seems to be readable only via Lua
+        code=<<
+            wml.variables["nfw_current_scenario_id"] = wesnoth.scenario.id
+        >>
+    [/lua]
+[/event]
+
 # Any campaign-specific last breath handler should listen for this event and disable itself too
 [event]
     name=nfw_disable_for_this_scenario
@@ -177,6 +188,7 @@
 				message= _ "With this modification enabled, units are merely wounded instead of killed. If you choose the possibility of dead or undead, some units still can definitely die. If you win this scenario the wounded units will be added to your recall list.
 
 This does not apply to any unit that the objectives require you to keep alive. Even if they say they’re only wounded, the enemy will give your heroes no chance."
+				image="units/human-loyalists/duelist-die5.png"
 			[/message]
 			{VARIABLE nfw_first_death yes}
 		[/then]
