--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -1,6 +1,6 @@
 #textdomain wesnoth-Non_Fatal_Wounds
 
-# This file contains special handling for campaigns that just need to either set nfw_exclude_unit_id, or call nfw_disable_for_this_scenario, without more complex campaign-specific handling.
+# This file contains special handling for campaigns.
 #
 # Using so many ifdefs is an odd style, but if they weren't there then each of these would still need a comment saying which campaign it refers to, and it might affect other campaigns too.
 
@@ -27,12 +27,7 @@
 # A list of scenarios where no units should survive, or the survivors don't reappear in later scenarios.
 [event]
     name=start
-    [lua]
-        # This seems to be readable only via Lua
-        code=<<
-            wml.variables["nfw_current_scenario_id"] = wesnoth.scenario.id
-        >>
-    [/lua]
+
     [switch]
         variable=nfw_current_scenario_id
 #ifdef CAMPAIGN_SCEPTRE_FIRE
@@ -42,6 +37,7 @@
                 speaker=narrator
                 # po: generic message which could apply to any scenario where the storyline already explains why even the surviving units don't reappear later in the campaign
                 message= _ "The non-fatal wound modification is disabled for this scenario."
+				image="units/human-loyalists/duelist-die5.png"
             [/message]
             [fire_event]
                 name=nfw_disable_for_this_scenario
@@ -54,6 +50,7 @@
             [message]
                 speaker=narrator
                 message= _ "The non-fatal wound modification is disabled for this scenario."
+				image="units/human-loyalists/duelist-die5.png"
             [/message]
             [fire_event]
                 name=nfw_disable_for_this_scenario
@@ -66,12 +63,6 @@
 # Some campaign-specific or scenario-specific warnings that display a message but don't change the behavior of the mod.
 [event]
     name=start
-    [lua]
-        # This seems to be readable only via Lua
-        code=<<
-            wml.variables["nfw_current_scenario_id"] = wesnoth.scenario.id
-        >>
-    [/lua]
     [switch]
         variable=nfw_current_scenario_id
 #ifdef CAMPAIGN_DELFADORS_MEMOIRS
@@ -81,6 +72,7 @@
             [message]
                 speaker=narrator
                 message= _ "The non-fatal wound modification might work unusually with this campaign. The recall lists change during the campaign, and units that are non-fatally wounded may reappear on the wrong recall list."
+				image="units/human-loyalists/duelist-die5.png"
                 # I'm not worrying about campaigns like SotA, which have divergent paths but each path has similar recruit lists and the paths recombine later
             [/message]
         [/case]
@@ -92,8 +84,269 @@
                 speaker=narrator
                 # po: For this scenario, the objective is to avoid deaths for as long as possible, the scenario ends when any unit perishes.
                 message= _ "The non-fatal wound modification does not affect the objectives for this scenario. The unit can survives, but still triggers the same events as if it died."
+				image="units/human-loyalists/duelist-die5.png"				
             [/message]
+        [/case]
+#endif
+#ifdef CAMPAIGN_THE_RISE_OF_WESNOTH
+        [case]
+            value=06_Temple_in_the_Deep
+			[message]
+				speaker=narrator
+				message=_ "Non-Fatal Wounds: As long as the lich Lord Lenvan is alive, all your dead units will rise as undead regardless of cause of death. Choose if you want to lose them all forever or you prefer to let chance decide. You can still irretrievably lose your units forever if you are attacked by a unit with plague."
+				image="units/human-loyalists/duelist-die5.png"				
+				[option]
+					label=_ "Disable Non-Fatal Wounds until Lord Lenvan dies"
+					default=yes
+					[command]
+						[fire_event]
+							name=nfw_lord_lenvan
+						[/fire_event]
+						[set_variable]
+							name=nfw_all_plagued
+							value=yes
+						[/set_variable]
+					[/command]
+				[/option]
+				[option]
+					label=_ "Continues normal Non-Fatal Wounds behavior"
+					# no action, just leave the NFW enabled
+				[/option]
+			[/message]
         [/case]
 #endif
     [/switch]
 [/event]
+
+#ifdef CAMPAIGN_THE_RISE_OF_WESNOTH
+[event]
+    name=nfw_lord_lenvan
+    [remove_event]
+        id=nfw_catch_last_breath
+    [/remove_event]
+    {CLEAR_VARIABLE nfw_wounded}
+	[event]
+		name=last_breath
+		first_time_only=no
+		id=nfw_catch_lord_lenvan
+		
+		[filter]
+			id=Lich-Lord Lenvan
+		[/filter]
+		[set_variable]
+			name=nfw_all_plagued
+			value=no
+		[/set_variable]		
+		[message]
+			speaker=narrator
+			message=_ "Non-Fatal Wounds works normally again."
+			image="units/human-loyalists/duelist-die5.png"
+		[/message]
+		[event]
+			name=last_breath
+			first_time_only=no
+			id=nfw_catch_last_breath_lenvan
+			# This filter can contain a list of campaign-specific units that shouldn't be revived, at least not by this add-on. It's no problem if the nfw_exclude_unit_id variable isn't set, the mod still works.
+			# This only matters if their death doesn't trigger an automatic defeat, and if the side that they're on will end up on the player's recall list.
+			[filter]
+				[not]
+					id=$nfw_exclude_unit_id
+				[/not]
+			[/filter]
+
+			[fire_event]
+				name=nfw_dialogue_on_death
+				[primary_unit]
+					id=$unit.id
+				[/primary_unit]
+			[/fire_event]
+
+			# This isn't limited to a particular side, because some campaigns have multiple persistent sides.
+			# It isn't limited to player-controlled sides either, for example Olurf in LoW's 02_Hostile_Mountains.
+			[store_unit]
+				[filter]
+					{EVENT_UNIT}
+				[/filter]
+				mode=append
+				variable=nfw_wounded
+				kill=no
+			[/store_unit]
+		[/event]
+	[/event]
+[/event]
+#endif
+
+
+# LoW's scenario Costly Revenge is meant to kill off many of the player's own elves, before those elves become the other side of the elvish civil war. In single-player mode, give the player an option to disable the NFW mod near the end of that scenario, late enough that they'll be able to reload the autosave once they find out what the next battle is.
+
+#ifdef CAMPAIGN_LOW
+#ifndef MULTIPLAYER
+[event]
+    name=start
+    [switch]
+        variable=nfw_current_scenario_id
+        [case]
+            value=19_Costly_Revenge
+
+            [event]
+                name=moveto
+                first_time_only=yes
+                [filter]
+                    side=1
+                    [filter_location]
+                        terrain=*^V*
+                    [/filter_location]
+                    [have_location]
+                        terrain=*^V*
+                        count=2
+                    [/have_location]
+                [/filter]
+
+                [message]
+                    speaker=narrator
+                    message=_ "Non-Fatal Wounds: in all of mainline Wesnoth, this scenario is probably the most evil act by the player’s own side. The scenario is called Costly Revenge, and for the story it’s meant to be costly to the elves as well as these innocent saurians."
+					image="units/human-loyalists/duelist-die5.png"
+                    [option]
+                        label=_ "Disable Non-Fatal Wounds and let the story proceed as expected"
+                        default=yes
+                        [command]
+                            [fire_event]
+                                name=nfw_disable_for_this_scenario
+                            [/fire_event]
+                        [/command]
+                    [/option]
+                    [option]
+                        label=_ "Let all the elves survive"
+                        # no action, just leave the NFW enabled
+                    [/option]
+                [/message]
+            [/event]
+        [/case]
+    [/switch]
+[/event]
+#endif
+#endif
+
+
+# In SotA, Shynal's death causes her to be raised as a walking corpse, so this specific death needs to be avoided without triggering the campaign's name=die event.
+# She starts as a level 0, so it's likely that a player using this mod will put her in danger to try and level up.
+
+# The mechanism to do this is to use kill=yes in the [store_unit] tag. That could be generalised, but let's have some campaign-specific dialogue instead.
+
+#ifdef CAMPAIGN_SECRETS_OF_THE_ANCIENTS
+[event]
+    name=prestart
+    {VARIABLE nfw_exclude_unit_id "Shynal"}
+[/event]
+
+[event]
+    name=last_breath
+    first_time_only=no
+    id=nfw_catch_shynal
+    [filter]
+        id=Shynal
+    [/filter]
+
+    [message]
+        speaker=Shynal
+        message= _ "Ow, that was close. I’ll rest until the next battle."
+    [/message]
+    [if]
+        [have_unit]
+            id=Carcyn
+        [/have_unit]
+        [then]
+            [message]
+                speaker=Carcyn
+                message= _ "You could have brought her back anyway, right?"
+            [/message]
+            [if]
+                # This can't use have_unit, because that filters out units with zero hp
+                [variable]
+                    name=unit.race
+                    equals="human"
+                [/variable]
+                [then]
+                    [message]
+                        speaker=Ras-Tabahn
+                        # po: without this mod, she's brought back as a walking corpse
+                        message= _ "Only in part. She would never have the powers of a lich."
+                    [/message]
+                [/then]
+                [else]
+                    [message]
+                        speaker=Ras-Tabahn
+                        message= _ "Maybe as a ghost, but even then she would no longer have the powers of a lich."
+                    [/message]
+                [/else]
+            [/if]
+        [/then]
+    [/if]
+
+    [store_unit]
+        [filter]
+            {EVENT_UNIT}
+        [/filter]
+        mode=append
+        variable=nfw_wounded
+        kill=yes
+    [/store_unit]
+[/event]
+
+[event]
+    name=nfw_disable_for_this_scenario
+    [remove_event]
+        id=nfw_catch_shynal
+    [/remove_event]
+[/event]
+#endif
+
+
+# UtBS S02's events clear the dehydration status in a victory event. One option would be to copy
+# that code here, and hope that it doesn't change; another option is to spawn the clones of the
+# wounded units before the victory event fires.
+#
+# As this is a single-player campaign, the local_victory event is guaranteed to fire, and it's
+# unit-tested to fire before victory (in data/test/scenarios/events-test_victory.cfg).
+
+#ifdef CAMPAIGN_UNDER_THE_BURNING_SUNS
+[event]
+    name=start
+    [switch]
+        variable=nfw_current_scenario_id
+        [case]
+            value=02_Across_the_Harsh_Sands
+            [event]
+                name=local_victory
+                [foreach]
+                    array=nfw_wounded
+                    [do]
+                        [if]
+                            [variable]
+                                name=this_item.side
+                                equals=1
+                            [/variable]
+                            [then]
+                                # For UtBS' victory event to find them, they have to be spawned onto
+                                # the map instead of the recall list. Putting them on the map means
+                                # they also get the usual end-of-scenario healing and curing, so
+                                # leave them at 1 hp as a hint to the player about where these units
+                                # came from.
+                                {VARIABLE this_item.hitpoints 1}
+                                [unstore_unit]
+                                    variable=this_item
+                                    x,y=1,1
+                                    find_vacant=yes
+                                    animate=no
+                                [/unstore_unit]
+                            [/then]
+                        [/if]
+                    [/do]
+                [/foreach]
+                # Ensure that no duplicates appear
+                {CLEAR_VARIABLE nfw_wounded}
+            [/event]
+        [/case]
+    [/switch]
+[/event]
+#endif
