--- a/utils/last_scenario.cfg
+++ b/utils/last_scenario.cfg
@@ -18,6 +18,7 @@
     [message]
         speaker=narrator
         message= _ "Because this is the last scenario, the ending of the campaign will count wounded units as if they had been killed."
+		image="units/human-loyalists/duelist-die5.png"		
     [/message]
     [fire_event]
         id=nfw_disable_for_this_scenario
